--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "start": "node index.js",
     "test": "jest"
   },
+  "jest": {
+    "reporters": [
+      "default",
+      ["jest-junit", { "output": "./test-results.xml" }]
+    ]
+  },
   "author": "",
   "license": "ISC",
   "description": "node js prroject with express for devops cicd",
@@ -13,6 +19,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0"
   }
 }
